<resources>
    <string name="app_name">Weatherapp</string>
    
    <!-- Dummy Text -->
    <string name="dummy_city">-</string>
    <string name="dummy_date">-</string>
    <string name="dummy_weather">-</string>
    <string name="dummy_temp">0℃</string>
    <string name="dummy_min_temp">Min Temp: 0℃</string>
    <string name="dummy_max_temp">Max Temp: 0℃</string>
    <string name="dummy_humidity">0</string>
    <string name="dummy_pressure">0</string>
    <string name="dummy_wind">0</string>


    <!-- Text -->
    <string name="min_temp">Min Temp: %s</string>
    <string name="max_temp">Max Temp: %s</string>
    <string name="temp">%s℃</string>
    <string name="humidity_text">Humidity</string>
    <string name="pressure_text">Pressure</string>
    <string name="wind_text">Wind</string>
    <string name="created_by">Created By Haaweejee</string>
    <string name="updated_at">Update At</string>
    <string name="failed_alert">Gagal, Silahkan Swipe Up</string>
    <string name="success">Berhasil</string>
    <string name="loading_alert">Please wait</string>


</resources>