<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <TextView
            android:id="@+id/cityName_id"
            style="@style/cityNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/dummy_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/updateTime_id"
            style="@style/text16Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dummy_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityName_id" />

        <TextView
            android:id="@+id/weatherCondition_id"
            style="@style/cityWeatherText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/dummy_weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/updateTime_id" />

        <TextView
            android:id="@+id/temperature_id"
            style="@style/cityTemperatureText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_temp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherCondition_id" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_id">

            <TextView
                android:id="@+id/min_temperature_id"
                style="@style/text16Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/dummy_min_temp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/max_temperature_id"
                style="@style/text16Sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dummy_max_temp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_id">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/humidity_text"
                    android:src="@drawable/ic_humidity" />

                <TextView
                    style="@style/boxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity_text" />

                <TextView
                    android:id="@+id/humidity_id"
                    style="@style/boxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_humidity" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toStartOf="@+id/cardView2"
            app:layout_constraintStart_toEndOf="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/temperature_id">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/humidity_text"
                    android:src="@drawable/ic_pressure" />

                <TextView
                    style="@style/boxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure_text" />

                <TextView
                    android:id="@+id/pressure_id"
                    style="@style/boxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_pressure" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="32dp"
            android:background="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_id">

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/humidity_text"
                    android:src="@drawable/ic_wind" />

                <TextView
                    style="@style/boxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_text" />

                <TextView
                    android:id="@+id/wind_id"
                    style="@style/boxText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_wind" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/text16Sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_by"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
